<resources>
    <string name="app_name">Table_Grid_Layout</string>
    <string name="security">Security</string>
    <string name="music">Music</string>
    <string name="battery">Battery</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="alarms">Alarms</string>
    <string name="widgets">Widgets</string>
    <string name="call">Call</string>
    <string name="contacts">Contacts</string>
    <string name="clear">Clear</string>
    <string name="day">WED</string>
    <string name="day_week">SAT</string>
    <string name="first_week">13 OCT</string>
    <string name="second_week">15 OCT</string>
    <string name="month">October</string>
    <string name="save">SAVE</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="table_layout">TABLE</string>
</resources>
