<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_security"/>

            <TextView
                android:id="@+id/str_security"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/security"
                android:text="@string/security"
                android:textColor="@color/letter_color"
                android:textSize="20dp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_music"/>
            <TextView
                android:id="@+id/str_music"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:layout_below="@id/music"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_battery"/>
            <TextView
                android:id="@+id/str_battery"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                android:layout_below="@id/battery"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bluetooth"/>
            <TextView
                android:id="@+id/str_bluetooth"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth"
                android:layout_below="@id/bluetooth"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wifi"/>
            <TextView
                android:id="@+id/str_wifi"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:layout_below="@id/wifi"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/alarms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarms"/>
            <TextView
                android:id="@+id/str_alarms"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/alarms"
                android:layout_below="@id/alarms"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/widgets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_widgets"/>
            <TextView
                android:id="@+id/str_widgets"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/widgets"
                android:layout_below="@id/widgets"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call"/>
            <TextView
                android:id="@+id/str_call"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_below="@id/call"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck"
            android:gravity="center">
            <ImageView
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contacts"/>
            <TextView
                android:id="@+id/str_contacts"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:layout_below="@id/contacts"
                android:textSize="20dp"
                android:textColor="@color/letter_color"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btnTableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/bck5"
            android:gravity="center">
            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"/>
            <TextView
                android:id="@+id/str_arrow"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/table_layout"
                android:layout_below="@id/arrow"
                android:textSize="20dp"
                android:textColor="@color/green_dark"
                android:gravity="center"/>
        </RelativeLayout>
    </GridLayout>
</ScrollView>