<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@color/bck_color"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel"/>
        <TextView
            android:id="@+id/str_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="30dp"
            android:textColor="@color/letter_color"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@color/bck_color">
        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="25dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/day_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_week"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_week"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_below="@id/day"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_week"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_below="@id/day_week"/>
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="S"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="M"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="T"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="W"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="T"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="F"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="S"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>
</LinearLayout>